--- a/demo_calc/templates/base.html
+++ b/demo_calc/templates/base.html
@@ -7,7 +7,7 @@
   <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- bootstrap CSS -->
   <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <title>Hello, Demo!</title>
+    <title>Sample page!</title>
 </head>
 <body>
 <!-- 네비게이션바 -->
