--- a/demo_calc/templates/users/login.html
+++ b/demo_calc/templates/users/login.html
@@ -5,17 +5,17 @@
         {% csrf_token %}
         {% include "form_errors.html" %}
         <div class="mb-3">
-            <label for="username">사용자ID</label>
+            <label for="username">user ID</label>
             <input type="text" class="form-control" name="username" id="username"
                    value="{{ form.username.value|default_if_none:'' }}">
         </div>
         <div class="mb-3">
-            <label for="password">비밀번호</label>
+            <label for="password">password</label>
             <input type="password" class="form-control" name="password" id="password"
                    value="{{ form.password.value|default_if_none:'' }}">
         </div>
-        <button type="submit" class="btn btn-primary">로그인</button>
-        <button type="button" class="btn btn-primary" onclick="location.href='/users/signup/'">회원가입</button>
+        <button type="submit" class="btn btn-primary">login</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='/users/signup/'">signup</button>
     </form>
 </div>
 {% endblock %}
